[gd_scene load_steps=14 format=3 uid="uid://c0rvj10r0c7kc"]

[ext_resource type="Script" path="res://Scrips/Menu/InteracaoMenu.gd" id="1_a1dkv"]
[ext_resource type="Texture2D" uid="uid://desqu7hr2dr65" path="res://assents/Cenarios/Menu/Background Cidade Menu/Night/1.png" id="1_is0c4"]
[ext_resource type="Texture2D" uid="uid://q5djil4h5ab" path="res://assents/Cenarios/Menu/Background Cidade Menu/Night/2.png" id="2_1iqli"]
[ext_resource type="Texture2D" uid="uid://e74ysxc73rt7" path="res://assents/Cenarios/Menu/Background Cidade Menu/Night/3.png" id="4_q37d1"]
[ext_resource type="Texture2D" uid="uid://gteupawidm1k" path="res://assents/Cenarios/Menu/Background Cidade Menu/Night/4.png" id="5_3pqla"]
[ext_resource type="Script" path="res://Scrips/Menu/movingBackground.gd" id="5_lupii"]
[ext_resource type="Texture2D" uid="uid://bicpx6884ffoy" path="res://assents/Cenarios/Menu/Background Cidade Menu/Night/5.png" id="6_idyoq"]
[ext_resource type="Texture2D" uid="uid://cxoswuxlk5ums" path="res://assents/Cenarios/Menu/LogoTipoMenu/FinanceLifeLogoMenu.png" id="8_0m0yk"]
[ext_resource type="Theme" uid="uid://cxifgpahfmjpl" path="res://assents/Fontes e Temas/Menu/menuTema.tres" id="8_foap8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k3iun"]

[sub_resource type="Animation" id="Animation_3mda4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-47, 137)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bg/LogoTipo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-417, -338)]
}

[sub_resource type="Animation" id="Animation_diq5w"]
resource_name = "TransiçãoInicial"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.633333, 1.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-47, 500), Vector2(-47, 137)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bg/LogoTipo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.06667, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-417, -700), Vector2(-417, -338)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rosih"]
_data = {
"RESET": SubResource("Animation_3mda4"),
"TransiçãoInicial": SubResource("Animation_diq5w")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a1dkv")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimaçãoBackgroud" type="Node2D" parent="bg"]
scale = Vector2(2.06759, 2.15962)

[node name="Camada 5" type="Sprite2D" parent="bg/AnimaçãoBackgroud"]
texture_filter = 1
texture = ExtResource("1_is0c4")

[node name="Camada 4" type="Sprite2D" parent="bg/AnimaçãoBackgroud"]
texture_filter = 1
texture = ExtResource("2_1iqli")

[node name="Camada 3" type="Sprite2D" parent="bg/AnimaçãoBackgroud"]
texture_filter = 1
texture = ExtResource("4_q37d1")
script = ExtResource("5_lupii")

[node name="Camada 2" type="Sprite2D" parent="bg/AnimaçãoBackgroud"]
texture_filter = 1
texture = ExtResource("5_3pqla")
script = ExtResource("5_lupii")

[node name="Camada 1" type="Sprite2D" parent="bg/AnimaçãoBackgroud"]
texture_filter = 1
texture = ExtResource("6_idyoq")
script = ExtResource("5_lupii")

[node name="LogoTipo" type="TextureRect" parent="bg"]
layout_mode = 2
offset_left = -417.0
offset_top = -338.0
offset_right = 663.0
offset_bottom = 1448.0
scale = Vector2(0.717371, 0.220497)
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource("8_0m0yk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = 137.0
offset_right = 65.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
scale = Vector2(-2.88338, -2.4232)
pivot_offset = Vector2(68.3652, 59.3156)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Inicio_Botão" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("8_foap8")
text = "   NOVO JOGO   "

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_k3iun")

[node name="Créditos_Botão" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("8_foap8")
text = " CRÉDITOS"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_k3iun")

[node name="Sair_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("8_foap8")
text = "SAIR
"

[node name="AnimacaoEntrada" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rosih")
}
autoplay = "TransiçãoInicial"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Inicio_Botão" to="." method="_on_inicio_botão_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Créditos_Botão" to="." method="_on_créditos_botão_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Sair_Button" to="." method="_on_sair_button_pressed"]
